// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal disable overlay click 1`] = `
<div class="container"><button id="btn">Button</button>
  <!--teleport start-->
  <!--teleport end-->
  <transition-stub>
    <div class="fect-backdrop" style="display: none;">
      <div class="fect-backdrop__layer"></div>
      <div class="fect-backdrop__content">
        <transition-stub>
          <div role="dialog" tabindex="-1" class="fect-modal__wrapper" style="width: 500px; display: none;">
            <div class="fect-modal__hidden" tabindex="0" aria-hidden="true"></div>
            <div class="fect-modal__title">
              <h2 class="title">Test Modal</h2>
            </div>
            <div class="fect-modal__content">
              <!---->
            </div>
            <footer class="fect-modal__action"><button class="fect-button fect-button--default fect-button--medium fect-modal__button" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
                <!---->
                <!---->Cancel
              </button><button class="fect-button fect-button--default fect-button--medium fect-modal__button" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
                <!---->
                <!---->Done
              </button></footer>
            <div class="fect-modal__hidden" tabindex="0" aria-hidden="true"></div>
          </div>
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal overlay 1`] = `
<div class="container"><button id="btn">Button</button>
  <!--teleport start-->
  <!--teleport end-->
  <transition-stub>
    <div class="fect-backdrop" style="display: none;">
      <div class="fect-backdrop__layer hidden"></div>
      <div class="fect-backdrop__content">
        <transition-stub>
          <div role="dialog" tabindex="-1" class="fect-modal__wrapper" style="width: 500px; display: none;">
            <div class="fect-modal__hidden" tabindex="0" aria-hidden="true"></div>
            <div class="fect-modal__title">
              <h2 class="title">Test Modal</h2>
            </div>
            <div class="fect-modal__content">
              <!---->
            </div>
            <footer class="fect-modal__action"><button class="fect-button fect-button--default fect-button--medium fect-modal__button" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
                <!---->
                <!---->Cancel
              </button><button class="fect-button fect-button--default fect-button--medium fect-modal__button" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
                <!---->
                <!---->Done
              </button></footer>
            <div class="fect-modal__hidden" tabindex="0" aria-hidden="true"></div>
          </div>
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal render normal 1`] = `
<div class="container"><button id="btn">Button</button>
  <!--teleport start-->
  <!--teleport end-->
  <transition-stub>
    <div class="fect-backdrop" style="display: none;">
      <div class="fect-backdrop__layer"></div>
      <div class="fect-backdrop__content">
        <transition-stub>
          <div role="dialog" tabindex="-1" class="fect-modal__wrapper" style="width: 500px; display: none;">
            <div class="fect-modal__hidden" tabindex="0" aria-hidden="true"></div>
            <div class="fect-modal__title">
              <h2 class="title">Test Modal</h2>
            </div>
            <div class="fect-modal__content">
              <!---->
            </div>
            <footer class="fect-modal__action"><button class="fect-button fect-button--default fect-button--medium fect-modal__button" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
                <!---->
                <!---->Cancel
              </button><button class="fect-button fect-button--default fect-button--medium fect-modal__button" style="--button-hover-bg: var(--button-default-color); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);" type="button">
                <!---->
                <!---->Done
              </button></footer>
            <div class="fect-modal__hidden" tabindex="0" aria-hidden="true"></div>
          </div>
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>
`;
